@@ -84,6 +84,9 @@ us a note on ns-developers mailing list.</p>
     See <a href=https://www.nsnam.org/bugzilla/show_bug.cgi?id=2467>bug 2467</a>
     for discussion.
 </li>
+<li><b>Packet Tag objects</b> are no longer constrained to fit within 21 
+    bytes; a maximum size is no longer enforced.
+</li>
 </ul>
 
 <hr>
